[package]
name = "buildzbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"]
version = "0.10.9"
